<resources>
    <string name="app_name">AmExer</string>


    <!--   ......................... LOG STRINGS ......................... -->
    <string name="actionBarEnabled">actionBarEnabled</string>
    <string name="actionBarDisabled">actionBarDisabled</string>


    <!--   ......................... OPEN CLOSE  ......................... -->
    <string name="weekend">Wochenende</string>
    <string name="free">Wir haben frei</string>
    <string name="open_till">Offen bis</string>
    <string name="see_you_at">Wir sind sehen uns um</string>
    <string name="zero_minute">:00</string>
    <string name="open">Offen</string>
    <string name="closed">Geschlossen</string>
    <string name="close">Schließen</string>


    <!--   ......................... ACTIVITY SUBNAMES ......................... -->
    <string name="afterSchool">Freizeit</string>
    <string name="dataCenter">Rechenzentrum</string>
    <string name="food">Essen</string>
    <string name="holidays">Vorlesungsfreie Zeiten</string>
    <string name="library">Bibliothek</string>
    <string name="maps">Karten</string>
    <string name="offices">Ämter und Büros</string>
    <string name="profs">Professoren</string>
    <string name="sports">Sportkurse</string>


    <!--   ......................... AFTER SCHOOL ......................... -->
    <string name="bars">Kneipen</string>
    <string name="clubs">Clubs</string>
    <string name="restaurants">Restaurants</string>

    <string name="barsLink">https://www.google.de/maps/search/Wolfenbuettel+Bars</string>
    <string name="clubsLink">https://www.google.de/maps/search/Wolfenbuettel+Clubs</string>
    <string name="restaurantsLink">https://www.google.de/maps/search/Wolfenbuettel+Restaurants</string>


    <!--   ......................... CAMPUSES  ......................... -->
    <string name="amExer">Am Exer</string>
    <string name="anDerSalzdahlumer">An der Salzdahlumer</string>
    <string name="campusExer">Campus am Exer</string>
    <string name="campusSalzdahlumer">Campus Salzdahlumer</string>


    <!--   ......................... FOOD ......................... -->
    <!-- Mensa -->
    <string name="mensa">Mensa</string>
    <string name="mensa_url">http://www.stw-on.de/wolfenbuettel/essen/menus/mensa-ostfalia</string>
    <string name="mensa_csv">mensa_data.csv</string>

    <!-- Solferino -->
    <string name="solferino">Solferino</string>
    <string name="solferino_image">solferino_image</string>
    <string name="solferino_limes_csv">solferino_limes_data.csv</string>
    <string name="solferino_url">http://www.kv.drk-kv-wf.de/fileadmin/user_upload/aktuelles/speisepläne/menu-solferino.pdf</string>

    <!-- Limes -->
    <string name="limes">Limes</string>
    <string name="limes_url">http://limes.dragosardo.de</string>


    <!--   ......................... HOLIDAYS  ......................... -->
    <string name="semesterBreak">Vorlesungsfrei</string>
    <string name="lectureTime">Vorlesungen finden statt</string>
    <string name="holiday">Feiertag</string>
    <string name="date">Datum</string>
    <string name="holidays_data.csv">holidays_data.csv</string>


    <!--   ......................... LIBRARY & DATA CENTER ......................... -->
    <string name="library_csv">semester_data.csv</string>
    <string name="semester">Semester</string>
    <string name="data_center_9_12">09:00 – 12:00</string>
    <string name="data_center_13_15">13:00 – 15:30</string>
    <string name="no_school">Vorlesungsfrei</string>
    <string name="library_9_18">09:30 – 18:00</string>
    <string name="library_9_15">09:30 – 15:00</string>
    <string name="library_9_13">09:30 – 13:00</string>
    <string name="monday">Mo</string>
    <string name="Tue">Di</string>
    <string name="We">Mi</string>
    <string name="Fr">Fr</string>
    <string name="Thu">Do</string>


    <!--   ......................... MAPS ......................... -->
    <string name="exerMap">KarteExer</string>
    <string name="salzdahlumerMap">KarteSalzdahlumer</string>

    <string name="buildingsExer">Gebäude am Exer:</string>
    <string name="buildingsSalzdahlumer">Gebäude an der Salzdahlumer:</string>

    <string name="campus_exer_data.csv">campus_exer_data.csv</string>
    <string name="campus_salzdahlumer_data.csv">campus_salzdahlumer_data.csv</string>


    <!--   ......................... OFFICES ......................... -->
    <string name="studienberatung_url">https://www.ostfalia.de/cms/de/studienberatung</string>
    <string name="studienforderung_url">https://www.ostfalia.de/cms/de/stipendien</string>
    <string name="service_bueros_url">https://www.ostfalia.de/cms/de/ssc/servicebueros/</string>
    <string name="career_service_url">https://www.ostfalia.de/cms/de/career</string>
    <string name="immatrikulations_buero_url">https://www.ostfalia.de/cms/de/ssc/immatrikulation/?nav2=true</string>
    <string name="international_office_url">https://www.ostfalia.de/cms/de/international/internationales_Buero_-_student_office</string>

    <string name="international_office">International Office</string>
    <string name="immatrikulationsbuero">Immatrikulationsbuero</string>
    <string name="career_service">Career Service</string>
    <string name="servicebueros">Servicebueros</string>
    <string name="studienfoerderung">Studienfoerderung</string>
    <string name="studienberatung">Studienberatung</string>
    <string name="offices_title">Informationen</string>


    <!--   ......................... Professoren ......................... -->
    <string name="tel">tel:</string>

    <!-- Faculties -->
    <string name="electrical_engineering">Elektrotechnik</string>
    <string name="informatik">Informatik</string>
    <string name="machine_engineering">Maschinenbau</string>
    <string name="law">Recht</string>
    <string name="social_work">Soziale Arbeit</string>
    <string name="supply_engineering">Versorgungstechnik</string>

    <string name="profs_electrical_engineering">Professoren - Elektrotechnik</string>
    <string name="profs_informatik">Professoren - Informatik</string>
    <string name="profs_machine_engineering">Professoren - Maschinenbau</string>
    <string name="profs_law">Professoren - Recht</string>
    <string name="profs_social_work">Professoren - Soziale Arbeit</string>
    <string name="profs_supply_engineering">Professoren - Versorgungstechnik</string>

    <!-- Profs-Data -->
    <string name="profs_electrical_engineering_csv">profs_electrical_engineering.csv</string>
    <string name="profs_informatik_csv">profs_informatik.csv</string>
    <string name="profs_law_csv">profs_law.csv</string>
    <string name="profs_machine_engineering_csv">profs_machine_engineering.csv</string>
    <string name="profs_social_work_csv">profs_social_work.csv</string>
    <string name="profs_supply_engineering_csv">profs_supply_engineering.csv</string>


    <!--   ......................... SPORTS ......................... -->
    <string name="sports_data.csv">sports_data.csv</string>
    <string name="sportsLink">https://www.hochschulsport.ostfalia.de/angebote/aktueller_zeitraum/_</string>
    <string name="limes_image">limes_image</string>
    <string name="mensa_button">mensa_button</string>

</resources>
