<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profs"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_profs_informatik"
            android:background="@color/wolfenbuettelBlue"
            android:text="@string/profs"
            android:focusable="false"
            android:textColor="#ffffff"
            android:inputType="none"
            android:gravity="center"
            android:layout_gravity="left|top" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_electrical_engineering"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp"
                android:text="@string/electrical_engineering" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informatik"
                android:id="@+id/button_informatik"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_engineering"
                android:id="@+id/button_machine_engineering"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/law"
                android:id="@+id/button_law"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_work"
                android:id="@+id/button_social_work"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supply_engineering"
                android:id="@+id/button_supply_engineering"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_shape"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:width="200dp"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:height="60dp"
                android:layout_margin="10dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
