<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".Offices">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_choose_campus_food"
        android:background="@color/wolfenbuettelBlue"
        android:text="@string/offices_title"
        android:focusable="false"
        android:textColor="#ffffff"
        android:inputType="none"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="false"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/international_office"
            android:id="@+id/campusExer"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"

            android:height="60dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immatriculationsbuero"
            android:id="@+id/campusSalzdahlumer"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/career_service"
            android:id="@+id/Career_Service"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicebueros"
            android:id="@+id/Servicebueros"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studienfoerderung"
            android:id="@+id/Studienfoerderung"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studienberatung"
            android:id="@+id/studienberatung"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"

            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_margin="10dp" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>