<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".FoodAmMain"
    android:background="@color/backgroundOstfalia"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_campusFood"
        android:background="@color/wolfenbuettelBlue"
        android:text="@string/campusSalzdahlumer"
        android:focusable="false"
        android:textColor="#ffffff"
        android:inputType="none"
        android:gravity="center"
        android:layout_gravity="left|top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="124dp"
                    android:id="@+id/mensa_button"
                    android:background="@mipmap/ic_mensa"
                    android:clickable="true"
                    android:layout_gravity="left|center_vertical"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/mensa_button" />
            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mensa_text"
                    android:textColor="@color/ostfaliaGreen"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:textSize="20sp"


                    android:textStyle="normal"
                    android:focusable="false"
                    android:textIsSelectable="false"
                    android:text="@string/open"
                    android:layout_weight="0.70" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mensa_time"
                    android:text="@string/open_till"
                    android:textSize="16sp"
                    android:inputType="none"
                    android:focusable="false"
                    android:gravity="top|center"
                    android:layout_gravity="right|bottom"
                    android:textIsSelectable="false"
                    android:background="#ffffff"
                    android:layout_weight="0.30" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>