<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ChooseCampus"
    android:background="@color/white">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_choose_campus_food"
        android:background="@color/wolfenbuettelBlue"
        android:text="@string/food"
        android:focusable="false"
        android:textColor="#ffffff"
        android:inputType="none"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campusExer"
                    android:id="@+id/campusExer"
                    android:layout_gravity="center"
                    android:background="@drawable/round_shape"
                    android:textColor="#ffffff"
                    android:textStyle="normal"
                    android:width="200dp"
                    android:clickable="true"
                    android:focusableInTouchMode="true"

                    android:height="60dp" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campusSalzdahlumer"
                    android:id="@+id/campusSalzdahlumer"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:background="@drawable/round_shape"
                    android:width="200dp"
                    android:textStyle="normal"
                    android:textColor="#ffffff"
                    android:height="60dp" />
            </LinearLayout>
        </FrameLayout>



</RelativeLayout>
